[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/0_lvl.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/back/back1.png" type="Texture" id=2]
[ext_resource path="res://res/back/back3.png" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://res/back/back2.png" type="Texture" id=5]
[ext_resource path="res://res/ui/YLI Logo In-Out.png" type="Texture" id=6]
[ext_resource path="res://res/ui/9patch.png" type="Texture" id=7]
[ext_resource path="res://res/snd/wind.ogg" type="AudioStream" id=8]
[ext_resource path="res://joystick/Joystick.tscn" type="PackedScene" id=9]
[ext_resource path="res://joystick/UIContainer.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "InOut"
length = 3.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/CenterContainer/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.7, 2.8, 2.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 19, 23, 24, 25, 26 ]
}

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="LevelContainer" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = -1

[node name="Level" parent="LevelContainer" instance=ExtResource( 1 )]

[node name="Tween" type="Tween" parent="LevelContainer"]

[node name="SpeedrunTimer" type="Timer" parent="LevelContainer"]
wait_time = 120.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LevelContainer"]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_scale = 0.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.03, 0.02 )

[node name="Sprite" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -560.0
margin_top = -112.0
margin_right = 1440.0
margin_bottom = 400.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.08, 0.05 )

[node name="Sprite2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -560.0
margin_top = -104.0
margin_right = 1440.0
margin_bottom = 408.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.08 )

[node name="Sprite3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -552.0
margin_top = -96.0
margin_right = 1448.0
margin_bottom = 416.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="ParallaxBackground" parent="."]
layer = 1

[node name="EndScreen" type="Control" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/EndScreen"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="UI/EndScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "the end..?"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/EndScreen"]

[node name="TextTween" type="Tween" parent="UI/EndScreen"]

[node name="Logo" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Logo"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.184314, 0.156863, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI/Logo/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="UI/Logo/ColorRect/CenterContainer"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 10
hframes = 3
frame = 26

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Logo"]
anims/InOut = SubResource( 1 )

[node name="Tween" type="Tween" parent="UI/Logo"]

[node name="HelpMenu" type="Control" parent="UI"]
anchor_bottom = 1.0
margin_left = -100.0
margin_right = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="NinePatchRect" parent="UI/HelpMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 100.0
margin_bottom = 1.52588e-05
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 16, 16 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HelpMenu/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 6.0
margin_right = 26.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/HelpMenu/BG/VBoxContainer"]
margin_right = 121.0
margin_bottom = 184.0
text = "    Controle
A,D - run
SPACE - jump
K - action
W - climb
TAB - help

Wall jump
help is on
ldjam.com
"

[node name="SpeedrunTime" type="Label" parent="UI/HelpMenu/BG/VBoxContainer"]
margin_top = 188.0
margin_right = 121.0
margin_bottom = 202.0

[node name="Secret" type="Label" parent="UI/HelpMenu/BG/VBoxContainer"]
margin_top = 206.0
margin_right = 121.0
margin_bottom = 220.0
size_flags_vertical = 8
text = "..trcsvhmgsht "

[node name="Input" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickMove" parent="UI/Input" instance=ExtResource( 9 )]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -108.0
margin_right = 126.0
margin_bottom = -12.0
rect_pivot_offset = Vector2( 48, 48 )
expand = true
joystickRadius = 48

[node name="Stick" parent="UI/Input/JoystickMove" index="0"]
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 12, 12 )
expand = true

[node name="JoystickAction" parent="UI/Input" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -108.0
margin_right = -30.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 48, 48 )
expand = true
joystickRadius = 48

[node name="Stick" parent="UI/Input/JoystickAction" index="0"]
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 12, 12 )
expand = true
[connection signal="timeout" from="LevelContainer/SpeedrunTimer" to="." method="_on_SpeedrunTimer_timeout"]

[editable path="UI/Input/JoystickMove"]

[editable path="UI/Input/JoystickAction"]
